mpcop (0.3.0) UNRELEASED; urgency=medium

  * feat: update the Myst version
  * feat: polish the intro tour messages
  * feat: add info alert if the connection timeouts 

 -- Kristian Mika <xmika2@mail.muni.cz>  Fri, 03 Dec 2021 17:52:01 +0100

mpcop (0.2.0) unstable; urgency=medium

  * docs: add documentation
  * feat: use state for average latency in the home component 
  * feat: separate confirmation dialog to its own component 
  * fix: increase z-index of the debug area
  * feat: improve client debug messages
  * feat: improve robustnes - provide additional checks 
  * docs: update static files path

 -- Kristian Mika <xmika2@mail.muni.cz>  Thu, 02 Dec 2021 21:44:20 +0100

mpcop (0.1.0) unstable; urgency=medium

  * feat: initial platform

 -- Kristian Mika <xmika2@mail.muni.cz>  Thu, 18 Nov 2021 23:07:01 +0100